# sbgc-api-examples

LinuxSerialControl/: .gitignore  CMakeLists.txt  LinuxSerialControl.cpp
docs/: Default.profile
libraries/SBGC_Linux/: SBGC_Linux.cpp  SBGC_Linux.h
